visiblity-issues-v3 (#1954)

--- a/src/app/cdk/panel/panel-element/panel-element.component.scss
+++ b/src/app/cdk/panel/panel-element/panel-element.component.scss
@@ -12,7 +12,6 @@
 }
 
 app-panel-privacy {
-  width: 48px;
   margin-top: 4px;
 }
 
